<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="24sp"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/input_margin"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="24sp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@string/terms"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="20sp" />
    
</LinearLayout>